# kgdreaminvest

./: .env  .env.example  .gitignore  README.md  REFACTORING_GUIDE.md  kgdreaminvest.py  kgdreaminvest_old.py  main.py  pyproject.toml  requirements.txt
alpaca-py/examples/options/: options-bull-call-spread.ipynb
docs/: ALPACA_DATA_INTEGRATION.md  ALPACA_SYNC_GUIDE.md  OPTIONS_DREAM_INTEGRATION.md  OPTIONS_FIX_SUMMARY.md  OPTIONS_TRADING_DESIGN.md  RECONCILIATION_SUMMARY.md
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: __init__.py  config.py  utils.py
src/backend/: __init__.py  app.py
src/backend/routes/: __init__.py  api.py  bellwethers.py  graph.py  insights.py  investibles.py  main.py  options.py  prompts.py  stats.py  workers.py
src/backend/services/: __init__.py  formatters.py
src/database/: __init__.py  connection.py  operations.py  schema.py
src/frontend/static/css/: main.css
src/frontend/static/js/: app.js  graph.js  options.js  positions.js  prompts.js  transactions.js  utils.js
src/frontend/templates/: index.html
src/knowledge_graph/: __init__.py  correlation.py
src/llm/: __init__.py  budget.py  expansion_budget.py  interface.py  options_budget.py  prompts.py  providers.py
src/market/: __init__.py  alpaca_client.py  alpaca_options_client.py  alpaca_stocks_client.py  greeks.py  indicators.py  options_fetcher.py  signals.py  yahoo_options_client.py  yahoo_stocks_client.py
src/portfolio/: __init__.py  alpaca_options_trading.py  alpaca_stocks_trading.py  alpaca_trading.py  trading.py  yahoo_options_trading.py  yahoo_stocks_trading.py
src/prompts/: dream_prompts.json  expansion_prompts.json  options_prompts.json  think_prompts.json
src/workers/: __init__.py  dream_worker.py  market_worker.py  options_think_worker.py  options_worker.py  think_worker.py
tests/: diagnose_options.py  reconciliation_report.py  sync_alpaca_trades.py  test_alpaca_snapshot_data.py  test_options_fix.py
